@@ -76,6 +76,10 @@ CVS code -
 	- Simplify by reusing variables whereever possible, and add a
 	  parameter execute to indicate whether or not to be in "Execute
 	  Command" mode. (DLR)
+	- If file browsing succeeds, copy the filename we browsed to
+	  into ans, put back Enter, and show the prompt one last time so
+	  that it's exited properly and the cursor position at the
+	  statusbar is reset. (DLR)
   open_prevfile(), open_nextfile()
 	- Translate the "New Buffer" string when displaying "Switched
 	  to" messages on the statusbar. (DLR)
